# immersive_entertainment_system-host

./: .gitignore  CMakeLists.txt  README.md  build.sh  server-host.c
archived_source_codes/: CMakeLists.txt  Makefile-displayImage  Makefile1-serverHost  build.sh  clean.sh  displayImage.cpp
source_code/: Makefile  ScreenCapture.cpp  ScreenCapture.h  average_driver.cpp  displayImage.cpp  dominant_driver.cpp  menu.cpp  menu.h  mode1.cpp  mode1.h  mode1_driver.cpp  mode2.cpp  mode2.h  mode2_driver.cpp  mode3.cpp  mode3.h  mode3_driver.cpp  moodSetter.cpp  packetSender.cpp  packetSender.h  rgbCombiner.cpp  rgbCombiner.h  sendAverageScreenshot.cpp  sendAverageScreenshot.h  sendDominantColorScreenshot.cpp  sendDominantColorScreenshot.h
